﻿$Revision$
	$Author$ $Date$
	1. некоторые оптимизации/упрощения 

#Revision: 1764
	#Author: ctapmex Date: 2011-07-24 17:52:49 +0600 (Вс, 24 июл 2011)
	1. полностью переименовываем плагин на FarColorer

#Revision: 1761
	#Author: ctapmex Date: 2011-07-22 14:49:33 +0600 (Пт, 22 июл 2011)
	1. ошибка при попытке редактирваония горячей клавиши для "Autodetect"

#Revision: 1753
	#Author: ctapmex Date: 2011-07-14 15:50:15 +0600 (Чт, 14 июл 2011)
	1. 1751.1

#Revision: 1752
	#Author: ctapmex Date: 2011-07-14 14:58:32 +0600 (Чт, 14 июл 2011)
	1. rollback InternalString

#Revision: 1751
	#Author: ctapmex Date: 2011-07-13 16:43:02 +0600 (Ср, 13 июл 2011)
	1. утечки памяти

#Revision: 1748
	#Author: ctapmex Date: 2011-07-10 17:37:21 +0600 (Вс, 10 июл 2011)
	1. Far3 build 2105 API

#Revision: 1735
	#Author: ctapmex Date: 2011-07-05 11:00:10 +0600 (Вт, 05 июл 2011)
	1. Far3 build 2098 API
	2. size_t

#Revision: 1733
	#Author: ctapmex Date: 2011-07-04 15:05:03 +0600 (Пн, 04 июл 2011)
	1. для hotkey в диалоге настроек схем отображался неверный combobox 

#Revision: 1731
	#Author: ctapmex Date: 2011-07-04 14:35:15 +0600 (Пн, 04 июл 2011)
	1. незакрыт хэндл 

#Revision: 1730
	#Author: ctapmex Date: 2011-07-04 12:37:36 +0600 (Пн, 04 июл 2011)
	1. откат 1711. 

#Revision: 1729
	#Author: ctapmex Date: 2011-07-04 12:00:45 +0600 (Пн, 04 июл 2011)
	1. некоторые оптимизации

#Revision: 1728
	#Author: ctapmex Date: 2011-07-04 11:24:47 +0600 (Пн, 04 июл 2011)
	1. дополнена справка

#Revision: 1727
	#Author: ctapmex Date: 2011-07-03 23:42:29 +0600 (Вс, 03 июл 2011)
	1. поправлено поведение меню выбора типа файлов при добавлении/удалении в "Избранные"
	2. назначение горячих клавиш для элементов меню выбора типа файлов клавишей "F4"

#Revision: 1726
	#Author: ctapmex Date: 2011-07-01 17:45:07 +0600 (Пт, 01 июл 2011)
	1. для параметра FullBack и всех системных параметров схем в списке выбора 
	значений отображались неверные значения.
	2. новое меню выбора типа файлов