@@ -4,7 +4,7 @@
 /*
   farcolor.hpp
 
-  Colors Index for FAR Manager 3.0 build 2114
+  Colors Index for FAR Manager 3.0 build 2124
   HKCU\Software\Far Manager\Colors\CurrentPalette
 */
 
