@@ -1,5 +1,9 @@
 ﻿$Revision$
 	$Author$ $Date$
+	1. Far3 build 2124 API
+
+#Revision: 1765
+	#Author: ctapmex Date: 2011-07-24 23:56:40 +0600 (Вс, 24 июл 2011)
 	1. некоторые оптимизации/упрощения 
 
 #Revision: 1764
